# uni-push

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  ai.md  alembic.ini  podman-compose.yml  prd.md  pyproject.toml
app/: __init__.py  main.py
app/api/: deps.py  router.py
app/api/routes/: __init__.py  audit_logs.py  auth.py  channels.py  dashboard.py  groups.py  messages.py  push.py  push_keys.py  users.py
app/core/: config.py  crypto.py  enums.py  logging.py  sanitization.py  security.py
app/db/: base.py  session.py
app/models/: __init__.py  audit.py  channel.py  group.py  message.py  push_key.py  user.py
app/schemas/: audit.py  auth.py  channels.py  dashboard.py  groups.py  messages.py  push_keys.py  users.py
app/scripts/: reset_password.py  seed_admin.py
app/services/: adapters.py  audit.py  bootstrap.py  channels.py  groups.py  messages.py  push_keys.py  rate_limit.py  serializers.py  users.py
app/tests/: conftest.py  test_api.py  test_auth_and_adapters.py  test_postgres_integration.py  test_worker.py
app/workers/: arq.py
docs/: api.md  deployment.md  operations.md
migrations/: env.py
migrations/versions/: 4f9a1f0c9e21_security_hardening_and_indexes.py  8b7a3c1d2e44_make_push_key_rotation_timestamp_tz_aware.py  9d2f1c4a7b6e_remove_direct_channel_user_permissions.py  b8a78c4249f5_initial_schema.py  c6f3b7e9a1d2_product_maturity_groups_reliability.py
web/: README.md  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
web/src/: App.tsx  index.css  main.tsx
web/src/components/: theme-toggle.tsx
(+13 files in other folders)
